# dbr-legacy-modernization

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: create-project.md  deploy.md  generate-agent.md  generate-kb.md  generate-workflow.md  init-project.md  preview.md  sync-elevenlabs.md  validate.md
.claude/guides/: agent-generation-guide.md  kb-generation-guide.md  project-setup-guide.md  workflow-generation-guide.md
framework/defaults/: audio-settings.json  llm-settings.json  voices.json
framework/schemas/: agent.schema.json  deployment.schema.json  knowledge-base.schema.json  project.schema.json  widget.schema.json  workflow.schema.json
framework/templates/agents/: finalizer.md  orchestrator.md  specialist.md
framework/templates/knowledge-bases/: company-info.md  domain-knowledge.md  faq.md  procedures.md  product-catalog.md
framework/templates/projects/: appointment-booking.json  customer-service.json  event-guide.json  info-hotline.json  insurance-call-center.json
framework/templates/web/: widget-basic.html  widget-styled.html
framework/templates/workflows/: branching.json  hub-and-spoke.json  linear.json  transfer-tool.json
lib/: __init__.py  config_loader.py  elevenlabs_client.py  md_to_json.py  schema_validator.py
projects/dbr-info-agent/: README.md  add_new_kb.py  debug_agent.py  deploy_script.py  fix_kb_script.py  update_kb_script.py
projects/dbr-info-agent/agents/: info-agent.md
projects/dbr-info-agent/config/: deployment.json  project.json  widget.json  workflow.json
projects/dbr-info-agent/docs/: index.html
projects/dbr-info-agent/knowledge-bases/: CodeRevive - AI-vezérelt Legacy Rendszer Modernizációs Platform (1).md  kb-company-info.md  kb-data-security.md  kb-faq.md  (+2 more)
(+4 files in other folders)
